Fixed the problem of overflowing book description from the Index view of the Book entity. Configured the table in such a way that it will dynamically display the selected book description on mouse click on a separate modal, generated using JavaScript.

--- a/BookBazaarWeb/wwwroot/css/site.css
+++ b/BookBazaarWeb/wwwroot/css/site.css
@@ -259,9 +259,20 @@ tbody {
     text-align: left !important;
     white-space: nowrap;
     overflow: scroll !important;
-    /*text-overflow: ellipsis !important;*/
+    text-overflow: ellipsis !important;
+    cursor: pointer;
 }
 
 .TableDefinition::-webkit-scrollbar {
     display: none !important;
+}
+
+.HovarableTableData:hover {
+    text-decoration: underline !important;
+}
+
+.Paragraph {
+    display: block !important;
+    text-align: left !important;
+    margin-top: 1.5em !important;
 }
